<resources>
    <string name="app_name">MyLocalization</string>
    <string name="app_tittle"> Registration </string>
    <string name="form_text">Fill is this form to register as user</string>
    <string name="txtName"> Full name</string>
    <string name="txtEmail"> Email Address</string>
    <string name="txtNohp"> Phone Number</string>
    <string name="txtPassword"> Password</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="checkbox"> I have read and agree the terms</string>
    <string name="btnLanguage"> SET LANGUAGE</string>
</resources>
